fixed text align on edge

--- a/src/sass/static/affiliates_ib.scss
+++ b/src/sass/static/affiliates_ib.scss
@@ -200,7 +200,7 @@
             &-content {
                 font-size: 16px;
                 font-weight: 500;
-                text-align: start;
+                text-align: left;
                 margin-left: 20px;
 
                 &-image {
